# hardware-renderer-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
assets/: viking_room.mtl
docs/: city-scene-split-plan.md  clustered-lighting-notes.md  current-renderer-walkthrough.md  deformation-and-decal-eval.md  features.md  flat-decal-system-spec.md  ideas.md  light-culling-notes.md  module-cleanup-notes.md  paint-systems-notes.md  paint-uv-generation-notes.md  performance-diagnosis.md  proc-city-tiled-lighting-bug.md  rearchitecture-notes.md  refs.txt  render_item_binning_demo.py  render_item_binning_notes.py  rendering-scalability-notes.md  roadmap.md  static-batching-regression.md  tile_frustum_sphere_demo.py  world-paint-volume-notes.md
scripts/: fetch_dragon_attenuation.sh  fetch_kenney_assets.sh  fetch_sponza_optimized.sh
shaders/: bloom.frag  light.frag  light.vert  light_line.frag  light_solid.frag  mesh.frag  mesh.vert  overlay.frag  overlay.vert  proc_city.frag  proc_city.vert  shadow.vert
src/: app.cpp  app.h  app_debug_settings.cpp  app_imgui.cpp  app_imgui_overlay.cpp  app_imgui_windows.cpp  app_lifecycle.cpp  app_lighting.cpp  app_paint_balls.cpp  app_scene.cpp  app_spotlight.cpp  app_update.cpp  app_vehicle_lights.cpp  camera.cpp  camera.h  generated_prism.cpp  generated_prism.h  main.cpp  math_types.cpp  math_types.h  mesh_loader.cpp  mesh_loader.h  paint_runtime.h  scene.cpp  scene.h  scene_city.cpp  scene_city.h  scene_city_internal.h  scene_city_layout.cpp  scene_city_support.cpp  scene_fracture.cpp  scene_vehicle.cpp  state.h  texture_loader.cpp  texture_loader.h  ufbx.h  vehicle_lights.h  vulkan_helpers.cpp  vulkan_helpers.h  vulkan_renderer.cpp  (+1 more)
src/animation/: character.cpp  character.h  character_common.cpp  character_internal.h  character_loader.cpp  ufbx_impl.cpp
src/assets/: asset_registry.cpp  asset_registry.h  fbx_loader.cpp  fbx_loader.h  gltf_loader.cpp  gltf_loader.h  obj_loader.cpp  obj_loader.h  texture_loader.cpp  texture_loader.h
src/audio/: audio_system.cpp  audio_system.h  ricochet_audio.cpp
src/collision/: triangle_collider.cpp  triangle_collider.h
src/damage/: mesh_damage.cpp  mesh_damage.h
src/debug/: settings.cpp
src/decals/: flat_decal_system.cpp  flat_decal_system.h
src/gameplay/: destruction_mesh.cpp  destruction_mesh.h  fracture.cpp  fracture.h  fracture_runtime.cpp  fracture_sandbox.cpp  fracture_sandbox.h  paint_balls.cpp  paint_balls.h  paint_runtime.cpp  player_controller.cpp  player_controller.h  traffic.cpp  traffic.h
src/lighting/: runtime.cpp  runtime.h  runtime_internal.h  runtime_math.cpp  runtime_modes.cpp
src/render/: culling.cpp  culling.h  device.cpp  frame.cpp  imgui.cpp  internal.h  pipeline.cpp  pipeline_descriptors.cpp  pipeline_lights.cpp  render_batches.cpp  render_batches.h  renderer.cpp  renderer.h  renderer_debug.cpp  renderer_flat_decals.cpp  renderer_lifecycle.cpp  renderer_paint.cpp  renderer_visibility.cpp  resources.cpp  resources_scene.cpp  shadow.cpp  swapchain.cpp
src/runtime/: lifecycle.cpp  scene_reload.cpp  update.cpp
src/text/: text_system.cpp  text_system.h
src/ui/: overlay.cpp  system.cpp  windows.cpp  windows_fracture.cpp
